[tool.poetry]
name = "broken-robot"
version = "0.1.0"
description = ""
authors = ["Justin Bayer <bayerj@argmax.ai>"]
readme = "README.md"
packages = [{include = "broken_robot"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
black = "^22.10.0"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
